Updated home, library, profile, and settings screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MusicPlayerApplication</string>
+    <string name="title_activity_playlist_screen">PlaylistScreenActivity</string>
 </resources>
