--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MusicPlayerApplication</string>
+    <string name="title_activity_sign_in">SignInActivity</string>
+    <string name="title_activity_genre">GenreActivity</string>
+    <string name="title_activity_library">LibraryActivity</string>
 </resources>
