added, profile, dashboard.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MusicPlayerApplication</string>
     <string name="title_activity_playlist_screen">PlaylistScreenActivity</string>
+    <string name="title_activity_artist">ArtistActivity</string>
 </resources>
