--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_sign_in">SignInActivity</string>
     <string name="title_activity_genre">GenreActivity</string>
     <string name="title_activity_library">LibraryActivity</string>
+    <string name="title_activity_get_started_acticity">GetStartedActicity</string>
 </resources>
