--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_genre">GenreActivity</string>
     <string name="title_activity_library">LibraryActivity</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_now_playing_screen">NowPlayingScreen</string>
 </resources>
